# argmax

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CODEBASE_OVERVIEW.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts  vitest.config.ts  vitest.perf.config.ts
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
agents/docs/: approvals-checks.md  architecture.md  chat-cards.md  data.md  electron.md  gh.md  ipc.md  memory.md  openspec.md  performance.md  providers.md  release.md  runtime.md  styling.md  terminal.md  testing.md  tournaments.md  workspaces.md
assets/: icon.icns
design/plan-card/: TASK.md  plan-card.html  preview.html  preview.tsx
docs/: approvals-checks.md  architecture.md  chat-cards.md  data.md  gh.md  ipc.md  memory.md  performance.md  providers.md  release.md  runtime.md  styling.md  terminal.md  testing.md  workspaces.md
openspec/archive/2026-05-21-architecture-excellence-sweep/: ARCHITECTURE_AUDIT.md  FINDINGS.md  PROGRESS.md  SPEC.md
openspec/custom/issues/: audit-2026-07-05.md
openspec/custom/reviews/: current-architecture-artifacts.md
scripts/: build-preload.mjs  check-bindings-fresh.mjs  check-bundle-size.mjs  check-bundle.mjs  check-tauri-bridge.mjs  ensure-node-pty-helper.cjs  install-mac.sh
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: legacy-migrations.md  pre-rust-migrations.md
src-tauri/src/: dock.rs  error.rs  lib.rs  main.rs  menu.rs  notifications.rs  state.rs  updater.rs
src-tauri/src/approvals/: dangerous_action_policy.rs  mod.rs  service.rs
src-tauri/src/attachments/: protocol.rs  store.rs
src-tauri/src/checks/: service.rs
src-tauri/src/files/: git_grep_parser.rs  mod.rs  workspace_files.rs
src-tauri/src/gh/: mod.rs  poller.rs  service.rs
src-tauri/src/git/: exec.rs  mod.rs  ops.rs
src-tauri/src/ide/: detection.rs  launch.rs  mod.rs
src-tauri/src/ipc/: approvals.rs  attachments.rs  attempts.rs  checkpoints.rs  checks.rs  dashboard.rs  git_ops.rs  health.rs  inputs.rs  learnings.rs  mcp.rs  mod.rs  projects.rs  providers.rs  prs.rs  review.rs  scoring.rs  session.rs  skills.rs  system.rs  terminal.rs  tournaments.rs  validation.rs  workspace_files.rs  workspaces.rs
src-tauri/src/mcp/: auth.rs  mod.rs  registry.rs
src-tauri/src/memory/: extractor.rs  injector.rs  mod.rs
src-tauri/src/persistence/: approvals.rs  checks.rs  dashboard.rs  database.rs  events.rs  gh.rs  learnings.rs  migrations.rs  mod.rs  prepared.rs  projects.rs  repository_tests.rs  scoring_policies.rs  sessions.rs  time.rs  tournaments.rs  usage.rs  workspaces.rs
src-tauri/src/providers/: adapters.rs  discovery.rs  environment.rs  flush_queue.rs  follow_up.rs  mod.rs  orphan_cleanup.rs  pricing.rs  runtime.rs  session_service.rs  subagent_trace.rs  title.rs
src-tauri/src/providers/normalizer/: claude.rs  codex.rs  cursor.rs  mod.rs
src-tauri/src/review/: checkpoints.rs  git_review.rs  mod.rs
src-tauri/src/sessions/: attention.rs
src-tauri/src/skills/: registry.rs
src-tauri/src/terminal/: mod.rs  service.rs
src-tauri/src/util/: app_nap.rs  delta_coalescer.rs  gh_runner.rs  ipc_latency.rs  log_buffer.rs  mod.rs  process_control.rs  protocol_url.rs  startup_timer.rs  stream_reader.rs  sync.rs  tracing_init.rs  workspace_paths.rs
src-tauri/src/workspace_assets/: mod.rs  protocol.rs
src-tauri/src/workspaces/: mod.rs  orchestration.rs  watcher.rs
src-tauri/tests/: git_exec.rs  git_review.rs  health_smoke.rs  ipc_inventory.rs  provider_real_cli.rs  provider_session.rs  workspace_orchestration.rs
src-tauri/tests/fixtures/: channels.txt
src-tauri/tests/fixtures/claude/: permission_denied.events.snapshot.json  permission_denied.jsonl
src-tauri/tests/fixtures/codex/: collab_spawn_agent.events.snapshot.json  collab_spawn_agent.jsonl  command_approval_request.events.snapshot.json  command_approval_request.jsonl  file_change_approval_request.events.snapshot.json
src-tauri/tests/fixtures/provider/: fake_provider_cli.sh
src-tauri/tests/support/: git_repo.rs
src/main/: ipc.ts  main.ts  menu.ts  paths.ts  preload.ts  processControl.test.ts  processControl.ts
src/main/__tests__/: ipcHandlers.test.ts  menu.test.ts
src/main/approvals/: approvalService.test.ts  approvalService.ts  dangerousActionPolicy.test.ts  dangerousActionPolicy.ts
src/main/assets/: workspaceAssetProtocol.test.ts  workspaceAssetProtocol.ts
src/main/attachments/: attachmentProtocol.test.ts  attachmentProtocol.ts  attachmentStore.test.ts  attachmentStore.ts
src/main/bootstrap/: appBootstrap.ts  mainWindow.ts
src/main/checks/: checkService.test.ts  checkService.ts
src/main/constants/: timeouts.ts
src/main/dock/: dockBadgeService.ts
src/main/git/: exec.ts  (+2 more)
src/renderer/: App.grid.test.tsx  App.settings.test.tsx  App.sidebar.test.tsx  App.test.tsx  App.tsx  demoSnapshot.ts  formatCost.ts  formatCostUsd.test.ts  formatElapsed.test.ts  formatElapsed.ts  formatTokens.test.ts  formatTokens.ts  main.tsx  styles.css
src/shared/: appVersion.ts  assetProtocol.ts  attachmentProtocol.ts  bindings.d.ts  boundedSet.test.ts  boundedSet.ts  error.test.ts  error.ts  ipcSchemas.test.ts  ipcSchemas.ts  logger.test.ts  logger.ts  menuKeybindings.ts  providerModels.test.ts  providerModels.ts  safeJson.test.ts  safeJson.ts  terminalControls.ts  typeGuards.test.ts  typeGuards.ts  types.ts
src/test/: agentRowName.ts  appTestHarness.ts  check-bundle-size.test.ts  codemirrorMock.tsx  gitTestUtils.ts  perf.test.ts  providerSessionTestFixtures.ts  sessionConversationTestHarness.tsx  setup.ts
(+407 files in other folders)
