[package]
name = "argmax"
version = "0.2.0"
edition = "2021"
rust-version = "1.95"
description = "Argmax — local Tauri shell over the Rust core."
publish = false

[lib]
name = "argmax_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "argmax"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri >= 2.11 is required for `#[tauri::command(rename = "...")]`, which is
# the lever that preserves legacy IPC channel names (e.g. `providers:launch`)
# without renaming the Rust functions to match.
# See https://github.com/tauri-apps/tauri/releases/tag/tauri-v2.11.0.
tauri = { version = "2.11", features = [] }

# First-party Tauri 2 plugins used by the backend.
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"

# Multi-thread Tokio runtime. Provider PTYs and git shellouts fan out
# in parallel; a current-thread runtime would block command handlers.
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "process",
    "fs",
    "io-util",
] }

# `bundled-full` ships SQLite (sqlite3.c vendored) with FTS5 enabled,
# which we need for `events_fts` and `learnings_fts` sidecars.
rusqlite = { version = "0.32", features = ["bundled-full"] }

# Wezterm's cross-platform PTY crate; production-tested.
portable-pty = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

notify = "6"
tempfile = "3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
regex = "1"
walkdir = "2"
nix = { version = "0.29", features = ["signal"] }
phf = { version = "0.11", features = ["macros"] }

# `tauri-specta` emits TypeScript bindings from the Rust command surface
# so the renderer's `bindings.d.ts` stays in lockstep with the backend.
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript", "derive"] }
specta = "=2.0.0-rc.22"
specta-typescript = "=0.0.9"

once_cell = "1"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"

[features]
# Required by Tauri 2 for production builds; do not remove.
custom-protocol = ["tauri/custom-protocol"]
